update angular final project

--- a/src/app/dashboard/add-edit-cart/add-edit-cart.component.html
+++ b/src/app/dashboard/add-edit-cart/add-edit-cart.component.html
@@ -1,7 +1,4 @@
-<p>add-edit-cart works!</p>
-
-
-  <mat-card *ngFor="let item of items">
+ <mat-card *ngFor="let item of items">
     <p>
       {{item.title}}
     </p>
@@ -9,5 +6,5 @@
       <mat-icon>delete</mat-icon>
     </button>
   </mat-card>
-
+<button mat-raised-button color="primary" (click)="onBuy()">Buy</button>
 
