--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,8 @@
 <app-add-edit-item [item]="selectedItem" ></app-add-edit-item>
 <div class="div-spacer"></div>
-<app-list-items (changeData)="onChangeData($event)"></app-list-items>
+<app-list-items (changeData)="onChangeItem($event)"></app-list-items>
 
 <app-add-edit-cart></app-add-edit-cart>
+<app-add-edit-user [user]="selectedUser" ></app-add-edit-user>
+<app-list-users (changeData)="onChangeUser($event)"></app-list-users>
+<app-list-carts></app-list-carts>
